--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,7 @@ keywords = []
 classifiers = [
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.12",
-  "Development Status :: 5 - Production/Stable",
-  "License :: OSI Approved :: GNU Affero General Public License v3"
+  "Development Status :: 5 - Production/Stable"
 ]
 
 [project.optional-dependencies]
